updated input nilai

--- a/nilai.html
+++ b/nilai.html
@@ -498,33 +498,42 @@
                                                     <tr>
                                                         <th scope="row">Nilai Rata-rata</th>
                                                         <td>
-                                                            <div class="form-group">
-                                                                <input class="form-control" type="text">
-                                                            </div>
+                                                            <fieldset disabled>
+                                                                <div class="form-group">
+                                                                    <input class="form-control" type="text">
+                                                                </div>
+                                                            </fieldset>
+
                                                         </td>
                                                         <td>
 
                                                         </td>
                                                         <td>
-                                                            <div class="form-group">
-                                                                <input class="form-control" type="text">
-                                                            </div>
+                                                            <fieldset disabled>
+                                                                <div class="form-group">
+                                                                    <input class="form-control" type="text">
+                                                                </div>
+                                                            </fieldset>
                                                         </td>
                                                         <td>
 
                                                         </td>
                                                         <td>
-                                                            <div class="form-group">
-                                                                <input class="form-control" type="text">
-                                                            </div>
+                                                            <fieldset disabled>
+                                                                <div class="form-group">
+                                                                    <input class="form-control" type="text">
+                                                                </div>
+                                                            </fieldset>
                                                         </td>
                                                         <td>
 
                                                         </td>
                                                         <td>
-                                                            <div class="form-group">
-                                                                <input class="form-control" type="text">
-                                                            </div>
+                                                            <fieldset disabled>
+                                                                <div class="form-group">
+                                                                    <input class="form-control" type="text">
+                                                                </div>
+                                                            </fieldset>
                                                         </td>
                                                         <td>
 
