--- a/nilai.html
+++ b/nilai.html
@@ -99,7 +99,7 @@
                                 <!-- Card Content - Collapse -->
                                 <div class="collapse show" id="collapseCardExample">
                                     <div class="card-body">
-                                        <div class="table-responsive-xl">
+                                        <div class="table-responsive">
                                             <table class="table table-bordered">
                                                 <thead>
                                                     <tr>
@@ -211,7 +211,7 @@
                                 <!-- Card Content - Collapse -->
                                 <div class="collapse show" id="collapseCardExample2">
                                     <div class="card-body">
-                                        <div class="table-responsive-xl">
+                                        <div class="table-responsive">
                                             <table class="table table-bordered">
                                                 <thead>
                                                     <tr>
