--- a/persyaratan.html
+++ b/persyaratan.html
@@ -108,7 +108,7 @@
                         <div class="col-12">
                             <div class="card shadow">
                                 <div class="card-body">
-                                    <div class="table-responsive-xl">
+                                    <div class="table-responsive">
                                         <table class="table table-bordered">
                                             <thead>
                                                 <tr>
