--- a/program-studi.html
+++ b/program-studi.html
@@ -88,7 +88,7 @@
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
                         <h3 class="text-dark mb-0">Pilih Program Studi</h3>
                     </div>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col">
                             <div class="card shadow">
                                 <div class="card-body">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
 
-                    <div class="row mt-3">
+                    <div class="row mb-3">
                         <div class="col-12">
                             <div class="form-group">
                                 <button class="btn btn-bg-blue btn-sm"
@@ -155,7 +155,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row mt-3">
+                    <div class="row mb-3">
                         <div class="col-12">
                             <a href="daftar-baru.html" class="btn btn-blue btn-sm">Kembali</a>
                         </div>
