updated tanggal lahir dp

--- a/profile.html
+++ b/profile.html
@@ -474,6 +474,7 @@
                 format: 'dd-mm-yyyy',
                 autoclose: true,
                 todayHighlight: true,
+                maxViewMode: 'years'
             });
         });
     </script>
