--- a/forgot-password.html
+++ b/forgot-password.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Forgot Password - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/register-styles.css">
+    <link rel="stylesheet" href="assets/css/login-styles.css">
 </head>
 
 <body class="bg-gradient">
@@ -35,12 +35,12 @@
                         </div>
 
                         <div class="form-group">
-                            <button class="btn btn-bg-blue btn-block btn-login"
-                                onclick="location.href='dashboard.html'">RESET</button>
+                            <button class="btn btn-bg-blue btn-block btn-action"
+                                onclick="location.href='index.html'">RESET</button>
                         </div>
                         <hr>
-                        <div class="text-center text-forgot-pass">
-                            <a href="index.html">KEMBALI</a>
+                        <div class="text-center">
+                            <a class="form-link text-gray text-xs" href="index.html">KEMBALI</a>
                         </div>
                     </div>
                 </div>
