--- a/register.html
+++ b/register.html
@@ -29,14 +29,30 @@
                             <p class="form-title">Daftar Akun</p>
                         </div>
                         <hr>
+
+                        <div class="form-group">
+                            <label for="email">Nama</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+
                         <div class="form-group">
                             <label for="email">Email Address</label>
                             <input type="email" class="form-control" id="email">
                         </div>
 
                         <div class="form-group">
+                            <label for="email">Password</label>
+                            <input type="password" class="form-control" id="email">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email">Confirm Password</label>
+                            <input type="password" class="form-control" id="email">
+                        </div>
+
+                        <div class="form-group">
                             <button class="btn btn-block btn-action"
-                                onclick="location.href='dashboard.html'">REGISTER</button>
+                                onclick="location.href='dashboard.html'">DAFTAR</button>
                         </div>
                         <hr>
                         <div class="text-center ">
