updated login page

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -26,17 +26,18 @@
                 <div class="col-12 col-form">
                     <div class="container-col-form">
                         <div class="text-center">
-                            <p class="form-title">Reset Password</p>
+                            <p class="form-title">Pemulihan Password</p>
+                            <p class="text-dark form-text">Masukkan email yang terdaftar.</p>
                         </div>
                         <hr>
                         <div class="form-group">
-                            <label for="email">Email Address</label>
+                            <label for="email">Email</label>
                             <input type="email" class="form-control" id="email">
                         </div>
 
                         <div class="form-group">
                             <button class="btn btn-bg-blue btn-block btn-action"
-                                onclick="location.href='index.html'">RESET</button>
+                                onclick="location.href='index.html'">KIRIM</button>
                         </div>
                         <hr>
                         <div class="text-center">
