--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </div>
                         <hr>
                         <div class="form-group">
-                            <label for="email">Email Address</label>
+                            <label for="email">Email</label>
                             <input type="email" class="form-control" id="email">
                         </div>
                         <div class="form-group">
@@ -70,7 +70,7 @@
                         </div>
                         <hr>
                         <div class="text-center ">
-                            <a class="form-link text-gray text-xs" href="forgot-password.html">FORGOT PASSWORD</a>
+                            <a class="form-link text-gray text-xs" href="forgot-password.html">LUPA PASSWORD?</a>
                         </div>
                     </div>
                 </div>
