--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="email">Email Address</label>
+                            <label for="email">Email</label>
                             <input type="email" class="form-control" id="email">
                         </div>
 
@@ -46,7 +46,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="email">Confirm Password</label>
+                            <label for="email">Ulangi Password</label>
                             <input type="password" class="form-control" id="email">
                         </div>
 
